# Mutavol

./: .gitignore  CMakeLists.txt  main.cpp  main_test.cpp  mtv.cpp  mtvi.cpp  readme.md  test_code.cpp
docs/: args.md  buffer.md  linkedlist&nodes.md  position.md  reader.md
resources/: file_test.txt
source/: config.hpp.in  mutavol
source/args/: args.cpp  args.hpp  templates.hpp
source/core/: core.hpp  types.hpp
source/core/buffer/: buffer.hpp
source/core/classifier/: classifier.cpp  classifier.hpp
source/core/parser/: parser.cpp  parser.hpp  paser.hpp
source/core/reader/: reader.cpp  reader.hpp
source/core/scanner/: scanner.cpp  scanner.hpp
source/core/scanner/classifier/: classifier.cpp  classifier.hpp
source/core/scanner/reader/: reader.cpp  reader.hpp
source/core/scanner/slicer/: slicer.cpp  slicer.hpp
source/core/slicer/: slicer.cpp  slicer.h  slicer.hpp
source/files/: files.cpp  files.hpp
source/interpreter/: interpreter.hpp
source/interpreter/iparser/: iparser.cpp  iparser.hpp
source/reader/: reader.cpp  reader.hpp
source/scanner/: scanner.cpp  scanner.hpp
source/structures/: structures.hpp
source/utilities/data_structures/: linked_list.hpp  nodes.hpp  position.hpp  types.hpp
source/utilities/factory/: list_fact.hpp  node_fact.hpp
source/utils/: utils.hpp
source/utils/data_structures/: linked_list.hpp  nodes.hpp  position.hpp  types.hpp
source/utils/factory/: node_fact.hpp
source/utils/format/: format.hpp
tests/: cointegrated_test.cpp  test.cpp  testCalss.cpp  test_classifier.cpp  test_reader.cpp  test_slicer.cpp  test_sources.hpp  testslicer.cpp
